--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
+  animated_bottom_navigation_bar: ^1.3.3
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
