--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.1.2
   cloud_firestore: ^5.0.1
   firebase_storage: ^12.0.1
+  uri_to_file: ^1.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
