--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_storage: ^12.0.1
   uri_to_file: ^1.0.0
   path_provider: ^2.1.3
+  top_modal_sheet: ^2.1.0
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
