--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.3
   top_modal_sheet: ^2.1.0
   flutter_riverpod: ^2.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
