--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   top_modal_sheet: ^2.1.0
   flutter_riverpod: ^2.5.1
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
